fix spacing

--- a/_sass/custom-scss.scss
+++ b/_sass/custom-scss.scss
@@ -465,6 +465,17 @@ html, body {
     margin-right: 0 !important;
 }
 
+.exchange-reviews {
+	.buy-info-full .btn-primary {
+    margin-right: 0 !important;
+    margin-bottom: 50px;
+    
+    h4 {
+	    margin-top: 30px !important; 
+    }
+}
+}
+
 .navbar-brand {
     letter-spacing: -2px;
     float: left;
